# hse-haskell

./: hse-haskell.cabal
app/: Main.hs
src/: Hw2Task1.hs  Hw2Task2.hs  Hw2Task4.hs  Hw2Task5.hs  Hw3Task1.hs  Hw3Task2.hs  Task2.hs  Task3.hs  Task4.hs
