cabal-version: 1.12

name:           hse-haskell
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/tavplubix/hse-haskell#readme>
homepage:       https://github.com/tavplubix/hse-haskell#readme
bug-reports:    https://github.com/tavplubix/hse-haskell/issues
author:         Alexander Tokmakov
maintainer:     tavplubix@gmail.com
copyright:      2020 Alexander Tokmakov
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/tavplubix/hse-haskell

library
  exposed-modules:
      Task2, Task3, Task4, Hw2Task1, Hw2Task2, Hw2Task4, Hw2Task5
  other-modules:
      Paths_hse_haskell
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable hse-haskell-exe
  main-is: Main.hs
  other-modules:
      Paths_hse_haskell
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hse-haskell
  default-language: Haskell2010

